# learing_DP

./: CMakeLists.txt  README.md
example/BEHAVIOURAL/: 行为型对比.md
example/BEHAVIOURAL/ChainOfResponsibility/: CMakeLists.txt  demo.cpp  handler.h  职责链.md
example/BEHAVIOURAL/Command/: CMakeLists.txt  command.h  concrete_command.cpp  concrete_command.h  demo.cpp  invoker.cpp  invoker.h  receiver.h  命令.md
example/BEHAVIOURAL/Interpreter/: CMakeLists.txt  concrete_expression.cpp  context.h  demo.cpp  interpreter.h  解释器.md
example/BEHAVIOURAL/Iterator/: CMakeLists.txt  concrete_container.cpp  concrete_iterator.cpp  container.h  demo.cpp  iterator.h  迭代器.md
example/BEHAVIOURAL/Mediator/: CMakeLists.txt  colleague.h  concrete_colleague.cpp  concrete_colleague.h  concrete_mediator.cpp  concrete_mediator.h  demo.cpp  mediator.h  中介者.md
example/BEHAVIOURAL/Memento/: CMakeLists.txt  demo.cpp  memento.cpp  memento.h  originator.cpp  originator.h  备忘录.md
example/BEHAVIOURAL/Observer/: CMakeLists.txt  concrete_observer.cpp  concrete_observer.h  concrete_subject.h  demo.cpp  observer.h  subject.cpp  subject.h  观察者.md
example/BEHAVIOURAL/State/: CMakeLists.txt  concrete_state.cpp  concrete_state.h  context.cpp  context.h  demo.cpp  state.cpp  state.h  状态.md
example/BEHAVIOURAL/Strategy/: 策略.md
example/BEHAVIOURAL/Template/: 模板.md
example/BEHAVIOURAL/Visitor/: CMakeLists.txt  concrete_element.cpp  concrete_element.h  concrete_visitor.cpp  concrete_visitor.h  demo.cpp  element.h  visitor.h  访问者.md
example/CREATIONAL/: 创建型对比.md
example/CREATIONAL/AbstractFactory/: 抽象工厂.md
example/CREATIONAL/Builder/: 建造者.md
example/CREATIONAL/FactoryMethod/: 工厂方法.md
example/CREATIONAL/Prototype/: 原型.md
example/CREATIONAL/Singleton/: CMakeLists.txt  单例.md
example/STRUCTURAL/: 结构型对比.md
example/STRUCTURAL/Adapter/: CMakeLists.txt  适配器.md
example/STRUCTURAL/Bridge/: CMakeLists.txt  abstraction.h  abstractionImp.h  concrete_abstractionImp.cpp  concrete_abstractionImp.h  demo.cpp  refine_abstraction.cpp  refine_abstraction.h  桥接.md
example/STRUCTURAL/Composite/: CMakeLists.txt  composite.cpp  composite.h  demo.cpp  element.h  element_leaf.cpp  element_leaf.h  组合.md
example/STRUCTURAL/Decorator/: 装饰器.md
example/STRUCTURAL/Facade/: CMakeLists.txt  demo.cpp  facade.h  third_party_1.h  third_party_2.h  外观.md
example/STRUCTURAL/Flyweight/: CMakeLists.txt  concrete_flyweight.cpp  concrete_flyweight.h  demo.cpp  flyweight.cpp  flyweight.h  flyweight_factory.cpp  flyweight_factory.h  享元.md
example/STRUCTURAL/Proxy/: CMakeLists.txt  demo.cpp  (+4 more)
(+70 files in other folders)
